# LTP-HIT-SCIR

./: Makefile.in  README  configure  configure.in  index.html
doc/: About.html  Sharing_Plan.htm  cd-cover.psd  password.txt
doc/Sharing_Plan.files/: _desktop.ini  filelist.xml  header.htm
src/: Makefile.am  Makefile.in
src/__ltp_dll/: LTP.cpp  LTP.h  LTPResource.cpp  LTPResource.h  Makefile.am  Makefile.in  __ltp_dll.cpp  __ltp_dll.h  __ltp_dll_x.cpp
src/__ltp_dll_for_python/: ltp_dll_for_python.cpp  ltp_dll_for_python.h
src/__xml4nlp/: XML4NLP.H  XML4NLP.cpp
src/_crfwordsegment/: CRFSegEngine.h  CWSTaggerImpl.h  Makefile.am  Makefile.in
src/_irlas/: Bigram.cpp  Bigram.h  Dictionary.cpp  Dictionary.h  Graph.cpp  Graph.h  HMM.cpp  HMM.h  IRLAS.cpp  IRLAS.h  IRLAS_DLL.cpp  IRLAS_DLL.h  IRLAS_DLL_x.cpp  Location.cpp  Location.h  MyLib.cpp  MyLib.h  NumTime.cpp  NumTime.h  POSTag.cpp  POSTag.h  Person.cpp  Person.h  Segment.cpp  Segment.h
src/_ner/: Makefile.am  Makefile.in
src/_parser/: AugPronTag.cpp  Compound.h  (+16 more)
src/_srl/: AllTypesFeatures.cpp  AllTypesFeatures.h  ConsFeatures.cpp  ConsFeatures.h  ConsFeaturesExt.cpp  ConsFeaturesExt.h  ConsPdRelFeatures.cpp  ConsPdRelFeatures.h  ConsPdRelFeaturesExt.cpp  ConsPdRelFeaturesExt.h  DataPreProcess.cpp  DataPreProcess.h  DepSRL.cpp  DepSRL.h  Features.cpp  Features.h  FeaturesMethod.cpp  FeaturesMethod.h  FeaturesPack.cpp  FeaturesPack.h  Makefile.am  Makefile.in  PdFeatures.cpp  PdFeatures.h  PdFeaturesExt.cpp  PdFeaturesExt.h  SRLBaseline.cpp  SRLBaseline.h  SRLBaselineExt.cpp  SRLBaselineExt.h  SRLConfig.cpp  SRLConfig.h  SRLDictionary.cpp  SRLDictionary.h  resource.h  resource1.h
src/server/: Makefile.am  Makefile.in  ltp_server.cpp  mongoose.c  mongoose.h
web/: ltp.swf
(+107 files in other folders)
