INCLUDES = -I. -I../__maxent

lib_LTLIBRARIES = libsrl.la

libsrl_la_SOURCES = \
  AllTypesFeatures.cpp  ConsPdRelFeatures.cpp     DepSRL.cpp          FeaturesPack.cpp  MyTree.cpp         SRLBaseline.cpp     SRLDictionary.cpp \
  ConsFeatures.cpp      ConsPdRelFeaturesExt.cpp  Features.cpp        PdFeatures.cpp     SRLBaselineExt.cpp  SRL_DLL.cpp \
  ConsFeaturesExt.cpp   DataPreProcess.cpp        FeaturesMethod.cpp  MyLib.cpp         PdFeaturesExt.cpp  SRLConfig.cpp       SRL_DLL_x.cpp \
  Configuration.cpp	    FeatureExtractor.cpp	Sentence.cpp \
  AllTypesFeatures.h  ConsPdRelFeaturesExt.h  DataPreProcess.h  Features.h        MyLib.h     PdFeaturesExt.h  resource.h        SRLConfig.h \
  ConsFeaturesExt.h   ConsPdRelFeatures.h     DataStruct.h      FeaturesMethod.h  MyStruct.h  PdFeatures.h     SRLBaselineExt.h  SRLDictionary.h \
  ConsFeatures.h      ConstVar.h              DepSRL.h          FeaturesPack.h    MyTree.h    resource1.h      SRLBaseline.h     SRL_DLL.h \
  Configuration.h	FeatureExtractor.h	Sentence.h	tree.hh
